@@ -65,6 +65,7 @@ Bug fixes
  * Add Wagtail User Bar back to page previews and ensure moderation actions are available (Coen van der Kamp)
  * Fix issue where queryset annotations were lost (e.g. ``.annotate_score()``) when using specific models in page query (Dan Bentley)
  * Prevent date/time picker from losing an hour on losing focus when 12-hour times are in use (Jacob Topp-Mugglestone)
+ * Strip out HTML tags from ``RichTextField`` & ``RichTextBlock`` search index content (Timothy Bautista)
 
 
 Upgrade considerations
