@@ -1,7 +1,10 @@
 import json
+from html import unescape
 
 from django.core.serializers.json import DjangoJSONEncoder
 from django.db import models
+from django.utils.encoding import force_str
+from django.utils.html import strip_tags
 
 from wagtail.core.blocks import Block, BlockField, StreamBlock, StreamValue
 
@@ -18,6 +21,11 @@ class RichTextField(models.TextField):
         defaults = {'widget': get_rich_text_editor_widget(self.editor, features=self.features)}
         defaults.update(kwargs)
         return super().formfield(**defaults)
+
+    def get_searchable_content(self, value):
+        # Strip HTML tags to prevent search backend earch backend from indexing them
+        source = force_str(value)
+        return [unescape(strip_tags(source))]
 
 
 # https://github.com/django/django/blob/64200c14e0072ba0ffef86da46b2ea82fd1e019a/django/db/models/fields/subclassing.py#L31-L44
